tekst erin plakken om te zien hoeveel we hebben

--- a/voorstel/FamilienaamVoornaam-BPvoorstel.tex
+++ b/voorstel/FamilienaamVoornaam-BPvoorstel.tex
@@ -62,7 +62,54 @@
 
 % De hoofdtekst van het voorstel zit in een apart bestand, zodat het makkelijk
 % kan opgenomen worden in de bijlagen van de bachelorproef zelf.
-\input{voorstel-inhoud}
+% \input{voorstel-inhoud}
+
+
+\section{Introductie}%
+\label{sec:introductie}
+
+De technologie staat heel ver op evenementen, overal contactloos betalen. Ingang tickets met QR-code, vernieuwde gebruiksvriendelijke kassa systemen met contactloos betalen. De gedachtegang om de locker verhuur op evenementen te digitaliseren en te moderniseren komt door de verandering in de noden van de festivalgangers. Onderzoek is hierbij uitermate geschikt om te kijken op welke manier de eenvoud en snelheid verbeteren voor het huren en benuttigen van een locker. 
+
+De uitwerking van QR-code lockers is al reeds van kracht. Oprichters van LockIt-Rentals, Wannes Van Dorpe en Sebastien VandenHouten, hebben deze geïntroduceerd begin 2022. Bij het huren van een locker verkrijg je een QR-code, deze is de toegangscode tot uw gehuurd kluisje, waar je persoonlijke spullen kan opbergen.
+
+Na een druk festival en evenementen seizoen, zijn de lockers volledig functioneel. De meest normale manier van werken, is het verkoop van toegangscodes. Ook dit is een investering op zich aangezien je personeel moet uitbetalen. Resultaten concluderen dat het praktischer is om de lockers standalone te laten werken. Dit houdt in dat het bedrijf locker units levert en daarbij op afstand alles monitoren. Deze manier van werken veroorzaken enkele problemen met zich mee. Hieruit kunnen wij een probleemstelling uiten die in dit onderzoek een oplossing zal bieden. 
+
+%---------- Stand van zaken ---------------------------------------------------
+
+\section{State-of-the-art}%
+\label{sec:state-of-the-art}
+
+Bij lockerverhuur op festivals heb je 3 verschillende soorten sloten. Als eerste zijn er sloten die werken met een digitale pincode, deze code wordt vaak bedrukt op een kaartje. Een opberg kluisje op slot doen met een cilinderslot is een van de meest eenvoudige manier om jouw bezittingen veilig op te bergen. Nadelig hierbij is dat de verhuurder de sleutel altijd moet bijhouden. De laatste jaren zijn er nieuwe technologieën uitgevonden voor de eenvoudige opening van een kluisje. Eén van deze technologieën is het openen van een locker met een vooraf aangemaakte QR-code.
+
+QR codes is een machinaal leesbaar optisch label met informatie over bijhorende product. (Bron1). In ons onderzoek is het product ons toegangscode tot het openen van een locker. Nu biedt QR-codes veel voordelen ten opzichte van streepjescodes ook wel barcodes genoemd. Bij QR-codes is informatie verspreid in twee richtingen: horizontaal en verticaal. Dit maakt ook dat het lezen van een QR-code onmogelijk met het menselijk oog. (Bron 5 Walsh 2009). 
+
+Het feit dat ze gebruikt worden al toegangscode moeten we ervoor zorgen dat de gegevens altijd goed gelezen worden, zelfs al zijn delen van het symbool beschadigd of als er andere factoren dit verhinderen. De QR-codes heeft een foutcorrectiefunctie, de gegevens kan herstellen een QR-code die 30\% beschadigd of bevlekt is (Bron 4 Denso Wave 2022). QR-codes zijn ook ontworpen zodat deze gelezen kunnen worden uit elke hoek je ze ook houdt ten opzichte van de scanner wat zeker niet het geval is bij barcodes aangezien deze maar één dimensionaal zijn. (Bron website 2) De manier van soort camera speelt een enorme rol bij het inlezen van camera (bron 6), lichtinval op de camera vormt het grootste probleem. Hierdoor verliest het systeem bij het uitlezen snelheid en gebruiksvriendelijkheid tegenover de huurder. Deze probleem stelling is tot op de dag van vandaag nog steeds actief
+
+De hoofdfunctionaliteit van het gebruik van QR-codes, is uiteraard de data die daarin verborgen zit. QR-codes bevatten 10 keer meer informatie dan een barcode bij eenzelfde grote. (Bron1). Met deze data kan je elke kluisje linken aan de persoon die de locker heeft gekocht voor een specifieke periode op een specifiek evenement.
+
+
+Aangezien je deze QR-code niet kunt waarnemen kan deze niet onthouden worden. Als je deze QR-code kwijt bent, verlies je jouw restrictie om het gehuurde kluisje te open. Dit is een probleemstelling die LockIt-Rentals ondervonden heeft tijdens de zomer maanden van 2022. Om dit probleem te onderzoeken, zal er een oplossing moeten komen die op afstand de mensen hun gekregen QR-code terug te van een geautomatiseerde chatbot moeten.
+
+
+%---------- Methodologie ------------------------------------------------------
+\section{Methodologie}%
+\label{sec:methodologie}
+
+Afgelopen zomer ondervonden ze dat de snelheid bij het lezen van QR-codes problematisch kan zijn. Zeker als er onveranderbare factoren in mee spelen. Zoals hevige zon of felle regen. Op welke manier kan een QR-code sneller uitgelezen worden. Dit kunnen we benaderen door test opstellingen te maken. Zodanig dat wij kunnen onderzoeken welke technologieën sneller zouden werken.
+
+Anderzijds zullen we gaan onderzoeken hoe we QR-codes gaan reduceren in data hoeveelheden, ook wel comprimeren genoemd, zodat de communicatie tussen hardware en software vlotter te verlopen.  
+
+Alsook het kwijtspelen van gekregen QR-code is problematisch,  hierdoor is toegang tot hun persoonlijke toebehoren onmogelijk geworden.
+Op basis van een implementatie en een Proof of concept van een chatbot zal kunnen worden aangetoond dat het eenvoudig is om uw verloren QR-code terug op te halen.
+
+
+%---------- Verwachte resultaten ----------------------------------------------
+\section{Verwacht resultaat, conclusie}%
+\label{sec:verwachte_resultaten}
+
+Volgend festival seizoen wil LockIt-Rentals uitpakken met een volledig nieuw systeem, zodat de lockers grotendeels standalone draaien. Het nieuwe systeem moet ook een verbetering zijn qua lees snelheid van de QR-codes.
+Dit resulteert in minder bemande uitbatingen. Waardoor het verkoop en de populariteit van het bedrijf enorm groeit.
+
 
 \printbibliography[heading=bibintoc]
 
