--- a/voorstel/FamilienaamVoornaam-BPvoorstel.tex
+++ b/voorstel/FamilienaamVoornaam-BPvoorstel.tex
@@ -68,47 +68,59 @@
 \section{Introductie}%
 \label{sec:introductie}
 
-De technologie staat heel ver op evenementen, overal contactloos betalen. Ingang tickets met QR-code, vernieuwde gebruiksvriendelijke kassa systemen met contactloos betalen. De gedachtegang om de locker verhuur op evenementen te digitaliseren en te moderniseren komt door de verandering in de noden van de festivalgangers. Onderzoek is hierbij uitermate geschikt om te kijken op welke manier de eenvoud en snelheid verbeteren voor het huren en benuttigen van een locker. 
+Tegenwoordig staan festivals en evenementen heel ver op het vlak van technologie. Toegangstickets zijn voorzien van QR-codes, bezoekers kunnen overal contactloos betalen met NFC chips. De innovatie om de lockerverhuur op evenementen te digitaliseren en te moderniseren komt vanuit de veranderde noden en behoeften van festivalgangers. Onderzoek zal /kan doeltreffend zijn voor de implementatie van gebruiksvriendelijke technieken bij de verhuur van lockers.
 
-De uitwerking van QR-code lockers is al reeds van kracht. Oprichters van LockIt-Rentals, Wannes Van Dorpe en Sebastien VandenHouten, hebben deze geïntroduceerd begin 2022. Bij het huren van een locker verkrijg je een QR-code, deze is de toegangscode tot uw gehuurd kluisje, waar je persoonlijke spullen kan opbergen.
+Begin 2022 kwamen de oprichters van Lockit Rentals, Wannes Van Dorpe en Sebastien Vandenhouten, op de markt met nieuwe QR-units. Bij het huren van een locker ontvangt de klant een QR-code die als toegangscode dient voor het openen van een kluisje. Met die unieke QR-code kunnen klanten hun persoonlijke spullen veilig opbergen en de locker onbeperkt openen voor een vaste opgelegde periode. 
 
-Na een druk festival en evenementen seizoen, zijn de lockers volledig functioneel. De meest normale manier van werken, is het verkoop van toegangscodes. Ook dit is een investering op zich aangezien je personeel moet uitbetalen. Resultaten concluderen dat het praktischer is om de lockers standalone te laten werken. Dit houdt in dat het bedrijf locker units levert en daarbij op afstand alles monitoren. Deze manier van werken veroorzaken enkele problemen met zich mee. Hieruit kunnen wij een probleemstelling uiten die in dit onderzoek een oplossing zal bieden. 
+Bij Lockit Rentals zijn er twee opties om lockers te verhuren. De eerste mogelijkheid is het verkopen van gedrukte kaartjes met QR-codes aan de kassa. Echter brengt dit wel hoge personeelskosten met zich mee. Daarnaast kan men ook kiezen om de QR-units standalone uit te baten. Dit houdt in dat Lockit Rentals de units op locatie levert en vanop afstand alles monitort hierbij worden de QR-codes online verkocht. De problemen ontstaan als de QR-codes niet meer uitgelezen kunnen worden of wanneer de klant zijn/haar QR-code verliest. Deze problemen zowel hardware matig als software matig zijn. Vanuit deze probleemstelling formuleert dit onderzoek een oplossing.  
+
 
 %---------- Stand van zaken ---------------------------------------------------
 
 \section{State-of-the-art}%
 \label{sec:state-of-the-art}
 
-Bij lockerverhuur op festivals heb je 3 verschillende soorten sloten. Als eerste zijn er sloten die werken met een digitale pincode, deze code wordt vaak bedrukt op een kaartje. Een opberg kluisje op slot doen met een cilinderslot is een van de meest eenvoudige manier om jouw bezittingen veilig op te bergen. Nadelig hierbij is dat de verhuurder de sleutel altijd moet bijhouden. De laatste jaren zijn er nieuwe technologieën uitgevonden voor de eenvoudige opening van een kluisje. Eén van deze technologieën is het openen van een locker met een vooraf aangemaakte QR-code.
+Bij lockerverhuur bestaan er drie verschillende sloten, digitale pincodes, sleutelsloten en vernieuwde technologieën. Als eerste zijn er sloten met een digitale pincode, eventueel bedrukt op een kaartje. Deze zijn erg populair bij festivalgangs aangezien je dit makkelijk kunt onthouden. 
 
-QR codes is een machinaal leesbaar optisch label met informatie over bijhorende product. (Bron1). In ons onderzoek is het product ons toegangscode tot het openen van een locker. Nu biedt QR-codes veel voordelen ten opzichte van streepjescodes ook wel barcodes genoemd. Bij QR-codes is informatie verspreid in twee richtingen: horizontaal en verticaal. Dit maakt ook dat het lezen van een QR-code onmogelijk met het menselijk oog. (Bron 5 Walsh 2009). 
+De meest eenvoudige manieren om persoonlijke bezittingen veilig op te bergen is het kluisje vastmaken met een sleutel. Deze manier van lockeruitbating wordt minder vaak gebruikt op festivals, aangezien de kans om de sleutel te verliezen te groot is geworden. Daarbovenop bestaat er geen mogelijkheid om standalone te draaien wanneer men kiest voor sleutelsloten. 
 
-Het feit dat ze gebruikt worden al toegangscode moeten we ervoor zorgen dat de gegevens altijd goed gelezen worden, zelfs al zijn delen van het symbool beschadigd of als er andere factoren dit verhinderen. De QR-codes heeft een foutcorrectiefunctie, de gegevens kan herstellen een QR-code die 30\% beschadigd of bevlekt is (Bron 4 Denso Wave 2022). QR-codes zijn ook ontworpen zodat deze gelezen kunnen worden uit elke hoek je ze ook houdt ten opzichte van de scanner wat zeker niet het geval is bij barcodes aangezien deze maar één dimensionaal zijn. (Bron website 2) De manier van soort camera speelt een enorme rol bij het inlezen van camera (bron 6), lichtinval op de camera vormt het grootste probleem. Hierdoor verliest het systeem bij het uitlezen snelheid en gebruiksvriendelijkheid tegenover de huurder. Deze probleem stelling is tot op de dag van vandaag nog steeds actief
+De laatste jaren zijn nieuwe technologieën op de markt gekomen voor het openen van een kluisje. Eén van deze technologieën is het openen van een locker met een vooraf aangemaakte QR-code.
 
-De hoofdfunctionaliteit van het gebruik van QR-codes, is uiteraard de data die daarin verborgen zit. QR-codes bevatten 10 keer meer informatie dan een barcode bij eenzelfde grote. (Bron1). Met deze data kan je elke kluisje linken aan de persoon die de locker heeft gekocht voor een specifieke periode op een specifiek evenement.
+Een QR-code is een machinaal leesbaar optisch label met informatie over bijhorende product (Bron 1). In dit onderzoek is het product de toegangscode tot het openen van een locker. QR-codes staat voor Quick Response code en is een soort matrix streepjes code (Bron 11). Het is een tweedimensionale code dat informatie, zoals tekst, URL of andere data bevat (Bron 12). De QR-codes zijn zodanig ontworpen dat ze door een smartphone uitgelezen kunnen worden met een hoge snelheid (Bron 11). De grootte van de QR-code kan aangepast worden naarmate de hoeveelheid data die hierin gestockeerd moet worden. (Bron 11). Deze eigenschappen zijn zeer voordelig bij het geven dergelijke QR-codes die dienen als toegangscode.
+
+Het gebruik van QR-codes als toegangscode kan leiden tot enkele risico’s, onthouden van QR-code is onmogelijk, scanner van QR-unit kan defect zijn en kan leiden tot verhinderde toegang tot zijn/haar kluisje. Het is noodzakelijk dat de informatie die ze bevatten snel kan worden uitgelezen, ook al zijn bepaalde delen van het symbool beschadigd. Hierbij hebben QR-codes het voordeel dat ze een foutcorrectiefunctie bevatten zodat een QR-code die 30\% beschadigd of bevlekt is nog steeds kan worden uitgelezen (Bron 4 Denso Wave 2022). QR-codes zijn ook ontworpen zodanig dat ze uit elke hoek scanbaar zijn. Wat voordelig is aan het twee dimensionale eigenschap van de QR-code (Bron 2). 
 
 
-Aangezien je deze QR-code niet kunt waarnemen kan deze niet onthouden worden. Als je deze QR-code kwijt bent, verlies je jouw restrictie om het gehuurde kluisje te open. Dit is een probleemstelling die LockIt-Rentals ondervonden heeft tijdens de zomer maanden van 2022. Om dit probleem te onderzoeken, zal er een oplossing moeten komen die op afstand de mensen hun gekregen QR-code terug te van een geautomatiseerde chatbot moeten.
+
+Het soort camera speelt een enorme rol bij het uitlezen van gegevens (bron 6). De plaatsing hiervan is eveneens van cruciaal belang. Lichtinval op de camera vormt één van de grootste problemen, waardoor het systeem snelheid kan verliezen bij het uitlezen. Dit kan ook nadelige gevolgen hebben voor het gebruiksgemak van de huurder. Deze probleemstelling is tot op de dag van vandaag nog steeds relevant bij Lockit Rentals.
+
+De reden van QR-code gebruik is dat de gegenereerde code grote hoeveelheden data bevat die niet onthouden hoeft te worden door de huurder. QR-codes bevatten 10 keer meer informatie dan een barcode bij eenzelfde grootte (Bron1). Met deze data kan elk kluisje gelinkt worden aan de persoon die de locker heeft gehuurd op een specifiek evenement.
+
+Aangezien het lezen van een QR-code onmogelijk is met het menselijk oog kan deze niet gememoriseerd worden (Bron 5 Walsh 2009). Als men de QR-code kwijt raakt, vervalt de mogelijkheid om het gehuurde kluisje te openen. Met dit probleem kreeg Lockit Rentals veel te maken tijdens de zomermaanden van 2022. Om dit probleem te onderzoeken, zal er een oplossing moeten komen om vanop afstand de mensen hun aangekochte QR-code terug te laten genereren. Het gebruik van een chatbot kan hierbij helpen (bron 8). 
+
+Er bestaan verschillende soorten chatbots (bron 7). In dit onderzoek ligt de focus op het gebruik van een task based chatbot die, net zoals een frequently asked questions (FAQ) bot, met een databank werkt (bron 7). De chatbot legt vooropgestelde onderwerpen voor (bron 9) om zo het best passend antwoord te geven. De chatbot voert gevraagde acties uit en haalt gewenste informatie op uit de databank (bron 9). Deze informatie zal de toegangscode zijn van de gebruiker zijn gehuurde locker.
 
 
 %---------- Methodologie ------------------------------------------------------
 \section{Methodologie}%
 \label{sec:methodologie}
 
-Afgelopen zomer ondervonden ze dat de snelheid bij het lezen van QR-codes problematisch kan zijn. Zeker als er onveranderbare factoren in mee spelen. Zoals hevige zon of felle regen. Op welke manier kan een QR-code sneller uitgelezen worden. Dit kunnen we benaderen door test opstellingen te maken. Zodanig dat wij kunnen onderzoeken welke technologieën sneller zouden werken.
+Afgelopen zomer ondervond Lockit Rentals dat de snelheid bij het lezen van QR-codes problematisch kan zijn. Zeker als er onveranderbare factoren in mee spelen (bron 10), zoals hevige zon of felle regen. 
+Deze hinderpaal zal onderzocht worden door simulaties op te stellen (TODO bron ). Hieruit kunnen conclusies genomen worden om zo de functionaliteit te verbeteren voor effectieve doeleinden van de QR-Units. De snelheid bij het uitlezen van gemaakte QR-codes kan hierin ook positief beïnvloed worden. Door een aanpassing van attributen in de simulaties zoals soorten camera’s of een andere opstelling, kan het algoritme beelden anders gaan filteren (bron 10). Waardoor de communicatie tussen hardwaren en software vlotter kan verlopen.
 
-Anderzijds zullen we gaan onderzoeken hoe we QR-codes gaan reduceren in data hoeveelheden, ook wel comprimeren genoemd, zodat de communicatie tussen hardware en software vlotter te verlopen.  
+Het kwijtspelen van gekregen QR-code is problematisch bij standalone uitbatingen. Aangezien er niemand aanwezig is om de kwijtgespeelde QR-code opnieuw te laten genereren. Waardoor de toegang tot hun persoonlijke toebehoren onmogelijk wordt.
+Een implementatie en een Proof of concept van een geautomatiseerde chatbot zal kunnen worden aangetoond dat het eenvoudig is om uw verloren QR-code terug op te halen.
 
-Alsook het kwijtspelen van gekregen QR-code is problematisch,  hierdoor is toegang tot hun persoonlijke toebehoren onmogelijk geworden.
-Op basis van een implementatie en een Proof of concept van een chatbot zal kunnen worden aangetoond dat het eenvoudig is om uw verloren QR-code terug op te halen.
 
 
 %---------- Verwachte resultaten ----------------------------------------------
 \section{Verwacht resultaat, conclusie}%
 \label{sec:verwachte_resultaten}
 
-Volgend festival seizoen wil LockIt-Rentals uitpakken met een volledig nieuw systeem, zodat de lockers grotendeels standalone draaien. Het nieuwe systeem moet ook een verbetering zijn qua lees snelheid van de QR-codes.
-Dit resulteert in minder bemande uitbatingen. Waardoor het verkoop en de populariteit van het bedrijf enorm groeit.
+Volgend festival seizoen wil LockIt-Rentals uitpakken met een volledig vernieuwd systeem, zodat de lockers grotendeels standalone kunnen draaien. Het nieuwe systeem moet ook een verbetering zijn qua lees snelheid van de QR-codes. Het grootste aandacht punt is de fout correctie van het bij het lezen van de QR-codes. Als doel van dit onderzoek zullen gebruikte technologieën verbeterd worden, als gevolg dat LockIt-Rentals minder bemande uitbatingen zal moet organiseren. Waardoor de verkoop, populariteit, omzet en winsten van het bedrijf groeit.
+
+Voor de huurder zal door de aangepaste technologieën een verbetering bij het huren van een locker. Ook de service wordt aangepakt omwille van de technologische chatbot, die hun snel antwoorden zal geven, indien ze met problemen gekampt zitten.
+
 
 
 \printbibliography[heading=bibintoc]
