--- a/voorstel/FamilienaamVoornaam-BPvoorstel.tex
+++ b/voorstel/FamilienaamVoornaam-BPvoorstel.tex
@@ -13,7 +13,7 @@
 
 % Informatie over de opleiding, het vak en soort opdracht
 \studyprogramme{Professionele bachelor toegepaste informatica}
-\course{Bachelorproef}
+\course{Bachelorproef voorstel}
 \assignmenttype{Onderzoeksvoorstel}
 % Voor een voorstel in het Engels, haal de volgende 3 regels uit commentaar
 % \studyprogramme{Bachelor of applied information technology}
@@ -55,7 +55,9 @@
 \begin{document}
 
 \begin{abstract}
-  Hier schrijf je de samenvatting van je voorstel, als een doorlopende tekst van één paragraaf. Let op: dit is geen inleiding, maar een samenvattende tekst van heel je voorstel met inleiding (voorstelling, kaderen thema), probleemstelling en centrale onderzoeksvraag, onderzoeksdoelstelling (wat zie je als het concrete resultaat van je bachelorproef?), voorgestelde methodologie, verwachte resultaten en meerwaarde van dit onderzoek (wat heeft de doelgroep aan het resultaat?).
+  Dankzij nieuwe technologieën is het huren van een locker op festivals zeer eenvoudig. Bij de locker-units van het bedrijf Lockit Rentals kunnen lockers geopend worden aan de hand van QR-codes. Deze QR-codes worden voor aanvang van het evenement online verkocht, zodat de gebruiker moeiteloos hun persoonlijke bezittingen kunnen opbergen. QR-codes zijn zo ontworpen dat deze niet kunnen onthouden worden.
+  Bezoekers die hun QR-code verliezen, verliezen hierdoor de toegang tot hun locker. Een geautomatiseerde help chatbot kan assisteren om verloren QR-codes opnieuw te genereren.
+ 
 \end{abstract}
 
 \tableofcontents
@@ -68,11 +70,15 @@
 \section{Introductie}%
 \label{sec:introductie}
 
-Tegenwoordig staan festivals en evenementen heel ver op het vlak van technologie. Toegangstickets zijn voorzien van QR-codes, bezoekers kunnen overal contactloos betalen met NFC chips. De innovatie om de lockerverhuur op evenementen te digitaliseren en te moderniseren komt vanuit de veranderde noden en behoeften van festivalgangers. Onderzoek zal /kan doeltreffend zijn voor de implementatie van gebruiksvriendelijke technieken bij de verhuur van lockers.
+
+
+Tegenwoordig staan festivals en evenementen heel ver op het vlak van technologie. Toegangstickets zijn voorzien van QR-codes, bezoekers kunnen overal contactloos betalen met NFC chips. De innovatie om de lockerverhuur op evenementen te digitaliseren en te moderniseren komt vanuit de veranderde noden en behoeften van festivalgangers. Onderzoek zal doeltreffend zijn voor de implementatie van gebruiksvriendelijke technieken bij de verhuur van lockers.
 
 Begin 2022 kwamen de oprichters van Lockit Rentals, Wannes Van Dorpe en Sebastien Vandenhouten, op de markt met nieuwe QR-units. Bij het huren van een locker ontvangt de klant een QR-code die als toegangscode dient voor het openen van een kluisje. Met die unieke QR-code kunnen klanten hun persoonlijke spullen veilig opbergen en de locker onbeperkt openen voor een vaste opgelegde periode. 
 
-Bij Lockit Rentals zijn er twee opties om lockers te verhuren. De eerste mogelijkheid is het verkopen van gedrukte kaartjes met QR-codes aan de kassa. Echter brengt dit wel hoge personeelskosten met zich mee. Daarnaast kan men ook kiezen om de QR-units standalone uit te baten. Dit houdt in dat Lockit Rentals de units op locatie levert en vanop afstand alles monitort hierbij worden de QR-codes online verkocht. De problemen ontstaan als de QR-codes niet meer uitgelezen kunnen worden of wanneer de klant zijn/haar QR-code verliest. Deze problemen zowel hardware matig als software matig zijn. Vanuit deze probleemstelling formuleert dit onderzoek een oplossing.  
+Bij Lockit Rentals zijn er twee opties om lockers te verhuren. De eerste mogelijkheid is het verkopen van gedrukte kaartjes met QR-codes aan de kassa. Dit brengt echter hoge personeelskosten met zich mee. Daarnaast kan men ook kiezen om de QR-units standalone uit te baten. Dit houdt in dat Lockit Rentals de units op locatie levert en vanop afstand alles monitort. Hierbij worden de QR-codes online verkocht. De problemen ontstaan als de QR-codes niet meer uitgelezen kunnen worden of wanneer de klant zijn/haar QR-code verliest. Deze problemen kunnen zowel hardware matig als software matig zijn. Vanuit deze probleemstelling formuleert dit onderzoek een oplossing.  
+
+
 
 
 %---------- Stand van zaken ---------------------------------------------------
@@ -80,46 +86,59 @@ Bij Lockit Rentals zijn er twee opties om lockers te verhuren. De eerste mogelij
 \section{State-of-the-art}%
 \label{sec:state-of-the-art}
 
-Bij lockerverhuur bestaan er drie verschillende sloten, digitale pincodes, sleutelsloten en vernieuwde technologieën. Als eerste zijn er sloten met een digitale pincode, eventueel bedrukt op een kaartje. Deze zijn erg populair bij festivalgangs aangezien je dit makkelijk kunt onthouden. 
+Bij lockerverhuur bestaan er drie verschillende sloten: digitale pincodes, sleutelsloten en vernieuwde technologieën. Als eerste zijn er sloten met een digitale pincode, eventueel gedrukt op een kaartje. Deze zijn erg populair bij festivalgangers aangezien je dit makkelijk kunt onthouden, net zoals (TODO). 
 
-De meest eenvoudige manieren om persoonlijke bezittingen veilig op te bergen is het kluisje vastmaken met een sleutel. Deze manier van lockeruitbating wordt minder vaak gebruikt op festivals, aangezien de kans om de sleutel te verliezen te groot is geworden. Daarbovenop bestaat er geen mogelijkheid om standalone te draaien wanneer men kiest voor sleutelsloten. 
+De meest eenvoudige manier om persoonlijke bezittingen veilig op te bergen is het kluisje vastmaken met een sleutel. Deze manier van lockeruitbating wordt minder vaak gebruikt op festivals, aangezien de kans om de sleutel te verliezen te groot is geworden. Daarbovenop bestaat er geen mogelijkheid om de locker units standalone te laten draaien wanneer men kiest voor sleutelsloten. 
 
 De laatste jaren zijn nieuwe technologieën op de markt gekomen voor het openen van een kluisje. Eén van deze technologieën is het openen van een locker met een vooraf aangemaakte QR-code.
 
-Een QR-code is een machinaal leesbaar optisch label met informatie over bijhorende product (Bron 1). In dit onderzoek is het product de toegangscode tot het openen van een locker. QR-codes staat voor Quick Response code en is een soort matrix streepjes code (Bron 11). Het is een tweedimensionale code dat informatie, zoals tekst, URL of andere data bevat (Bron 12). De QR-codes zijn zodanig ontworpen dat ze door een smartphone uitgelezen kunnen worden met een hoge snelheid (Bron 11). De grootte van de QR-code kan aangepast worden naarmate de hoeveelheid data die hierin gestockeerd moet worden. (Bron 11). Deze eigenschappen zijn zeer voordelig bij het geven dergelijke QR-codes die dienen als toegangscode.
+\subsection{QR-codes}}%
+\label{sec:QR-codes}
 
-Het gebruik van QR-codes als toegangscode kan leiden tot enkele risico’s, onthouden van QR-code is onmogelijk, scanner van QR-unit kan defect zijn en kan leiden tot verhinderde toegang tot zijn/haar kluisje. Het is noodzakelijk dat de informatie die ze bevatten snel kan worden uitgelezen, ook al zijn bepaalde delen van het symbool beschadigd. Hierbij hebben QR-codes het voordeel dat ze een foutcorrectiefunctie bevatten zodat een QR-code die 30\% beschadigd of bevlekt is nog steeds kan worden uitgelezen (Bron 4 Denso Wave 2022). QR-codes zijn ook ontworpen zodanig dat ze uit elke hoek scanbaar zijn. Wat voordelig is aan het twee dimensionale eigenschap van de QR-code (Bron 2). 
+Een QR-code is een machinaal leesbaar optisch label met informatie over bijhorend product \autocite{Chang2014}. In dit onderzoek is het product de toegangscode tot het openen van een locker. QR-code staat voor Quick Response code en is een soort matrix streepjes code \autocite{Tiwari2016}. Het is een tweedimensionale code dat informatie, zoals tekst, URL of andere data bevat \autocite{Shin2012}. De QR-codes zijn zodanig ontworpen dat ze door een smartphone uitgelezen kunnen worden met een hoge snelheid \autocite{Tiwari2016}. De grootte van de QR-code kan aangepast worden naarmate de hoeveelheid data die hierin gestockeerd moet worden. \autocite{Tiwari2016}. Deze eigenschappen zijn zeer voordelig bij het geven van dergelijke QR-codes die dienen als toegangscode.
+
+Het gebruik van QR-codes als toegangscode kan leiden tot enkele risico’s. Namelijk het onthouden van QR-code is onmogelijk, alsook de scanner van een QR-unit kan defect zijn en kan leiden tot verhinderde toegang tot zijn/haar kluisje. Het is noodzakelijk dat de informatie die ze bevatten snel kan worden uitgelezen, ook al zijn bepaalde delen van het symbool beschadigd. Hierbij hebben QR-codes het voordeel dat ze een foutcorrectiefunctie bevatten zodat een QR-code die 30\% beschadigd of bevlekt is nog steeds kan worden uitgelezen \autocite{Tiwari2016}. QR-codes zijn ook ontworpen zodanig dat ze uit elke hoek scanbaar zijn. Wat voordelig is aan de tweedimensionale eigenschap van de QR-code \autocite{Incorporated2014}. 
+
+De reden van QR-code gebruik is dat de gegenereerde code grote hoeveelheden data bevat die niet onthouden hoeft te worden door de huurder. QR-codes bevatten 10 keer meer informatie dan een barcode bij eenzelfde grootte \autocite{Chang2014}. Met deze data kan elk kluisje gelinkt worden aan de persoon die de locker heeft gehuurd op een specifiek evenement.
 
 
 
-Het soort camera speelt een enorme rol bij het uitlezen van gegevens (bron 6). De plaatsing hiervan is eveneens van cruciaal belang. Lichtinval op de camera vormt één van de grootste problemen, waardoor het systeem snelheid kan verliezen bij het uitlezen. Dit kan ook nadelige gevolgen hebben voor het gebruiksgemak van de huurder. Deze probleemstelling is tot op de dag van vandaag nog steeds relevant bij Lockit Rentals.
+Het soort camera speelt een enorme rol bij het uitlezen van gegevens \autocite{Skurowski2022}. De plaatsing hiervan is eveneens van cruciaal belang. Lichtinval op de camera vormt één van de grootste problemen, waardoor het systeem snelheid kan verliezen bij het uitlezen. Dit kan ook nadelige gevolgen hebben voor het gebruiksgemak van de huurder. Deze probleemstelling is tot op de dag van vandaag nog steeds relevant bij Lockit Rentals. 
 
-De reden van QR-code gebruik is dat de gegenereerde code grote hoeveelheden data bevat die niet onthouden hoeft te worden door de huurder. QR-codes bevatten 10 keer meer informatie dan een barcode bij eenzelfde grootte (Bron1). Met deze data kan elk kluisje gelinkt worden aan de persoon die de locker heeft gehuurd op een specifiek evenement.
+\subsection{Chatbot}}%
+\label{sec:Chatbot}
 
-Aangezien het lezen van een QR-code onmogelijk is met het menselijk oog kan deze niet gememoriseerd worden (Bron 5 Walsh 2009). Als men de QR-code kwijt raakt, vervalt de mogelijkheid om het gehuurde kluisje te openen. Met dit probleem kreeg Lockit Rentals veel te maken tijdens de zomermaanden van 2022. Om dit probleem te onderzoeken, zal er een oplossing moeten komen om vanop afstand de mensen hun aangekochte QR-code terug te laten genereren. Het gebruik van een chatbot kan hierbij helpen (bron 8). 
+Aangezien het lezen van een QR-code onmogelijk is met het menselijk oog kan deze niet gememoriseerd worden \autocite{Walsh2009}. Als men de QR-code kwijt raakt, vervalt de mogelijkheid om het gehuurde kluisje te openen. Met dit probleem kreeg Lockit Rentals veel te maken tijdens de zomermaanden van 2022. Om dit probleem te onderzoeken, zal er een oplossing moeten komen om vanop afstand de mensen hun aangekochte QR-code terug te laten genereren. Het gebruik van een chatbot kan hierbij helpen \autocite{Brandtzaeg2017}. 
 
-Er bestaan verschillende soorten chatbots (bron 7). In dit onderzoek ligt de focus op het gebruik van een task based chatbot die, net zoals een frequently asked questions (FAQ) bot, met een databank werkt (bron 7). De chatbot legt vooropgestelde onderwerpen voor (bron 9) om zo het best passend antwoord te geven. De chatbot voert gevraagde acties uit en haalt gewenste informatie op uit de databank (bron 9). Deze informatie zal de toegangscode zijn van de gebruiker zijn gehuurde locker.
+Er bestaan verschillende soorten chatbots \autocite{Tamrakar2021}. In dit onderzoek ligt de focus op het gebruik van een task based chatbot die, net zoals een frequently asked questions (FAQ) bot, met een databank werkt  \autocite{Tamrakar2021}. De chatbot legt vooropgestelde onderwerpen voor om zo het best passend antwoord te geven. \autocite{Adamopoulou2020}. De chatbot voert gevraagde acties uit en haalt gewenste informatie op uit de databank \autocite{Adamopoulou2020}. Deze informatie zal de toegangscode zijn van de gebruiker van zijn gehuurde locker.
+
+
 
 
 %---------- Methodologie ------------------------------------------------------
 \section{Methodologie}%
 \label{sec:methodologie}
 
-Afgelopen zomer ondervond Lockit Rentals dat de snelheid bij het lezen van QR-codes problematisch kan zijn. Zeker als er onveranderbare factoren in mee spelen (bron 10), zoals hevige zon of felle regen. 
-Deze hinderpaal zal onderzocht worden door simulaties op te stellen (TODO bron ). Hieruit kunnen conclusies genomen worden om zo de functionaliteit te verbeteren voor effectieve doeleinden van de QR-Units. De snelheid bij het uitlezen van gemaakte QR-codes kan hierin ook positief beïnvloed worden. Door een aanpassing van attributen in de simulaties zoals soorten camera’s of een andere opstelling, kan het algoritme beelden anders gaan filteren (bron 10). Waardoor de communicatie tussen hardwaren en software vlotter kan verlopen.
+Afgelopen zomer ondervond Lockit Rentals dat de snelheid bij het lezen van QR-codes problematisch kan zijn. Zeker als er onveranderbare / weer beïnvloedende factoren in meespelen \autocite{Dr2022}, zoals hevige zon of felle regen. 
+Deze hinderpaal zal onderzocht worden door simulaties op te stellen \autocite{Skurowski2022}. Hieruit kunnen conclusies genomen worden om zo de functionaliteit te verbeteren voor effectieve doeleinden van de QR-Units. 
 
-Het kwijtspelen van gekregen QR-code is problematisch bij standalone uitbatingen. Aangezien er niemand aanwezig is om de kwijtgespeelde QR-code opnieuw te laten genereren. Waardoor de toegang tot hun persoonlijke toebehoren onmogelijk wordt.
-Een implementatie en een Proof of concept van een geautomatiseerde chatbot zal kunnen worden aangetoond dat het eenvoudig is om uw verloren QR-code terug op te halen.
+Door een aanpassing van attributen in de simulaties zoals soorten camera’s of een andere opstelling van het scansysteem, kan het algoritme beelden anders gaan filteren \autocite{Dr2022}. De snelheid bij het uitlezen van gemaakte QR-codes kan hierin ook positief beïnvloed worden. Daardoor zou de communicatie tussen hardwaren en software vlotter kunnen verlopen.
+
+Het kwijtspelen van een gekregen QR-code is problematisch bij standalone uitbatingen, omdat er niemand aanwezig is om de kwijtgespeelde QR-code opnieuw te laten genereren. Waardoor / Daardoor de toegang tot hun persoonlijke toebehoren onmogelijk wordt.
+Een implementatie en een proof of concept van een geautomatiseerde chatbot zou / zal kunnen aantonen dat het eenvoudig is om uw verloren QR-code terug op te halen.
 
 
 
-%---------- Verwachte resultaten ----------------------------------------------
+
+%---------- Verwachte resultaten ------------------------------x----------------
 \section{Verwacht resultaat, conclusie}%
 \label{sec:verwachte_resultaten}
 
-Volgend festival seizoen wil LockIt-Rentals uitpakken met een volledig vernieuwd systeem, zodat de lockers grotendeels standalone kunnen draaien. Het nieuwe systeem moet ook een verbetering zijn qua lees snelheid van de QR-codes. Het grootste aandacht punt is de fout correctie van het bij het lezen van de QR-codes. Als doel van dit onderzoek zullen gebruikte technologieën verbeterd worden, als gevolg dat LockIt-Rentals minder bemande uitbatingen zal moet organiseren. Waardoor de verkoop, populariteit, omzet en winsten van het bedrijf groeit.
+Volgend festivalseizoen wil LockIt-Rentals uitpakken met een volledig vernieuwd systeem, zodat de lockers grotendeels standalone kunnen draaien. Het vernieuwde systeem moet ook een verbetering zijn qua leessnelheid van de QR-codes. Hierbij is zal plaatsing en soort van de camera cruciaal zijn. 
 
-Voor de huurder zal door de aangepaste technologieën een verbetering bij het huren van een locker. Ook de service wordt aangepakt omwille van de technologische chatbot, die hun snel antwoorden zal geven, indien ze met problemen gekampt zitten.
+Voor de huurder zullen de aangepaste technologieën een verbetering zijn op vlak van gebruiksvriendelijkheid. Ook de manier van klantenservice wordt veranderd omwille van de technologische chatbot. Deze zal snel antwoorden bieden indien de gebruiker problemen ondervindt, het verliezen van de toegangscode voor het openen van een locker is hiervan een voorbeeld.
+
+Als doel van dit onderzoek zullen gebruikte technologieën verbeterd worden, als gevolg dat Lockit Rentals minder bemande uitbatingen zal moet organiseren. Waardoor de verkoop, populariteit, omzet en winsten / winst van het bedrijf zal groeien.
 
 
 
