rename paper + seba als copromoter erbij gezet

--- a/voorstel/VanDorpeLukas-BPvoorstel.tex
+++ b/voorstel/VanDorpeLukas-BPvoorstel.tex
@@ -13,7 +13,7 @@
 
 % Informatie over de opleiding, het vak en soort opdracht
 \studyprogramme{Professionele bachelor toegepaste informatica}
-\course{Bachelorproef voorstel}
+\course{Bachelorproef}
 \assignmenttype{Onderzoeksvoorstel}
 % Voor een voorstel in het Engels, haal de volgende 3 regels uit commentaar
 % \studyprogramme{Bachelor of applied information technology}
@@ -36,7 +36,8 @@
 % \email{yasmine.alaoui@student.hogent.be}
 
 % TODO: Geef de co-promotor op
-\supervisor[Co-promotor]{W. Van Dorpe (TODO, \href{mailto:wannesvandorpe@hotmail.com}{wannesvandorpe@hotmail.com})}
+\supervisor[Co-promotor]{W. Van Dorpe (Lockit Rentals, \href{mailto:wannesvandorpe@hotmail.com}{wannesvandorpe@hotmail.com})}
+\supervisor[Co-promotor]{S. Vandenhouten (Lockit Rentals, \href{mailto:sebastien@lockit.rentals}{        sebastien@lockit.rentals})}
 
 % Binnen welke specialisatierichting uit 3TI situeert dit onderzoek zich?
 % Kies uit deze lijst:
@@ -50,7 +51,7 @@
 %   zelf
 %
 \specialisation{Mobile \& Enterprise development}
-\keywords{Scheme, World Wide Web, $\lambda$-calculus}
+\keywords{Locker, QR-code, Chatbot, TODO}
 
 \begin{document}
 
