--- a/voorstel/VanDorpeLukas-BPvoorstel.tex
+++ b/voorstel/VanDorpeLukas-BPvoorstel.tex
@@ -36,9 +36,12 @@
 % \email{yasmine.alaoui@student.hogent.be}
 
 % TODO: Geef de co-promotor op
-\supervisor[Co-promotor]{W. Van Dorpe (Lockit Rentals, \href{mailto:wannesvandorpe@hotmail.com}{wannesvandorpe@hotmail.com})}
-\supervisor[Co-promotor]{S. Vandenhouten (Lockit Rentals, \href{mailto:sebastien@lockit.rentals}{        sebastien@lockit.rentals})}
 
+
+\supervisor[Co-promotor]{S. Vandenhouten (Lockit Rentals,
+\href{mailto:sebastien@lockit.rentals}{        sebastien@lockit.rentals})}
+
+%\supervisor[Co-promotor]{W. Van Dorpe (Lockit Rentals, %\href{mailto:wannesvandorpe@hotmail.com}{wannesvandorpe@hotmail.com})}
 % Binnen welke specialisatierichting uit 3TI situeert dit onderzoek zich?
 % Kies uit deze lijst:
 %
@@ -56,7 +59,7 @@
 \begin{document}
 
 \begin{abstract}
-  Dankzij nieuwe technologieën is het huren van een locker op festivals eenvoudig. Bij de locker units van het bedrijf Lockit Rentals kunnen lockers geopend worden met behulp van QR-codes, deze worden voor aanvang van het evenement online verkocht. QR-codes zijn zo ontworpen dat deze niet kunnen onthouden worden. Wanneer de QR-code scanner moeite heeft met het symbool uit te lezen of bezoekers verliezen hun QR-code, spelen ze hierdoor de toegang tot hun locker kwijt. Implementatie van nieuwe technologieën kan ervoor zorgen dat de QR-code scanners geoptimaliseerd worden. Bij verlies van de toegangscode, kan de huurder rekenen op een geautomatiseerde help chatbot die hun assisteert om verloren QR-codes opnieuw te genereren. Dit resulteert in meer gebruiksgemak naar de klanten toe en minder moeilijkheden tijdens uitbatingen van lockers.
+  Dankzij nieuwe technologieën is het huren van een locker op festivals eenvoudig. Bij de locker units van het bedrijf Lockit Rentals kunnen lockers geopend worden met behulp van QR-codes, deze worden voor aanvang van het evenement online verkocht. QR-codes zijn zo ontworpen dat deze niet kunnen onthouden worden. Wanneer de QR-code scanner moeite heeft met het symbool uit te lezen of bezoekers verliezen hun QR-code, spelen ze hierdoor de toegang tot hun locker kwijt. Implementatie van nieuwe technologieën kan ervoor zorgen dat de QR-code scanners geoptimaliseerd worden. Bij verlies van de toegangscode, kan de huurder rekenen op een geautomatiseerde help chatbot die hun assisteert om verloren QR-codes opnieuw te genereren. Dit resulteert in meer gebruiksgemak naar de klanten toe en minder moeilijkheden tijdens uitbating van lockers.
   
 \end{abstract}
 
