--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -11,10 +11,10 @@
 }
 
 @WWW{Incorporated2014,
-  author = {Denso Wave Incorporated},
-  date   = {2014-07-28},
-  title  = {QRcode.com},
-  url    = {https://www.qrcode.com/},
+  author  = {Denso Wave Incorporated},
+  title   = {QRcode.com},
+  url     = {https://www.qrcode.com/},
+  urldate = {2022-12-02},
 }
 
 @Article{Walsh2009,
@@ -65,15 +65,6 @@
   abstract  = {The use of chatbots evolved rapidly in numerous fields in recent years, including Marketing, Supporting Systems, Education, Health Care, Cultural Heritage, and Entertainment. In this paper, we first present a historical overview of the evolution of the international community's interest in chatbots. Next, we discuss the motivations that drive the use of chatbots, and we clarify chatbots' usefulness in a variety of areas. Moreover, we highlight the impact of social stereotypes on chatbots design. After clarifying necessary technological concepts, we move on to a chatbot classification based on various criteria, such as the area of knowledge they refer to, the need they serve and others. Furthermore, we present the general architecture of modern chatbots while also mentioning the main platforms for their creation. Our engagement with the subject so far, reassures us of the prospects of chatbots and encourages us to study them in greater extent and depth.},
 }
 
-@Article{Dr2022,
-  author       = {H, Dr and Kumar, A and Singh, Atithi and P, Bharath and Deepak},
-  date         = {2022-06},
-  journaltitle = {International Journal of Advanced Research in Science, Communication and Technology},
-  title        = {QR Code Detection},
-  doi          = {10.48175/IJARSCT-5353},
-  pages        = {357-360},
-}
-
 @InProceedings{Tiwari2016,
   author = {Tiwari, Sumit},
   date   = {2016-12},
@@ -95,6 +86,13 @@
   volume       = {28},
   abstract     = {QR codes, 2-D bar codes that can be read by special software on a smartphone, have been undergoing rapid development. This study examines how a Technology Acceptance Model could predict users’ intentions to continue using QR codes by integrating interactivity and quality motivations as primary determining factors. Although studies have shown interactivity is important to users, not many study have analyzed the mediating influence of interactivity within interactive marketing context. Therefore, the original TAM was expanded to encompass user perceptions of interactivity and quality. The results of this study show that user intentions and behaviors are largely influenced by the perception of the quality of QR codes. In addition, the results of the model show that interactivity is a key behavioral antecedent to the use of QR codes. In the extended model, the moderating and mediating effects of the perceived interactivity on relationships among the variables were found to be significant. The new set of variables is QR code-specific, acting as factors that enhance attitudes and behavioral intentions. Implications of the findings are discussed in terms of construction of a theory of interactivity and provision of practical insights into development of user-centered QR codes.},
   keywords     = {QR code, Interactive marketing, Adoption, Mediating effects, Moderating effects},
+}
+
+@Article{Girisha2022,
+  author = {Girisha, Dr and Kumar, A and Singh, Atithi and Deepak, and Bahadur, Rao and Mahabaleswarappa, Y and Hang, Sum},
+  date   = {2022-06},
+  title  = {QR Code Detection},
+  pages  = {2581-9429},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
